--- a/style.css
+++ b/style.css
@@ -8,9 +8,32 @@
 #root {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 1fr 12fr 1fr;
+    grid-template-rows: 1fr 1fr 12fr 1fr;
     height: 100vh;
     width: 100vw;
+}
+
+.navBar {
+    display: flex;
+    justify-content: flex-start;
+    align-items: end;
+    gap: 0.5rem;
+    padding-left: 1.5rem;
+    background-color: #218C74;
+    color: white;
+}
+
+.tabs {
+    padding: 8px 10px;
+}
+
+#home {
+    background-color: #ECF0F1;
+    color: #218C74;
+}
+
+.head {
+    background-color: #ECF0F1;
 }
 
 form {
@@ -18,6 +41,7 @@ form {
     justify-content: center;
     gap: 20px;
     align-items: center;
+    padding: 5px 0px 5px 0px;
 }
 
 input[type="radio"], input[type="checkbox"] {
@@ -43,7 +67,7 @@ input:checked + label {
 .row2 {
     display: flex;
     max-width: 60vw;
-    margin: 15px auto;
+    margin: 0.5rem auto;
 }
 
 .row2 input {
@@ -53,8 +77,10 @@ input:checked + label {
 }
 
 .row2 .selected-cell {
-    width: 100px;
+    width: 80px;
     text-align: center;
+    background-color: white;
+    margin-right: 0.5rem;
 }
 
 .header {
@@ -137,7 +163,7 @@ input:checked + label {
 }
 
 .foot {
-    background-color: #f8fbfd;
+    background-color: #ECF0F1;
 }
 
 .foot-form {
@@ -153,7 +179,7 @@ input:checked + label {
 }
 
 .foot-form input:checked + label {
-    background-color: green !important;
+    background-color: #218C74 !important;
     color: white;
 }
 
